--- a/Frontend/src/components/ServicesIntro.css
+++ b/Frontend/src/components/ServicesIntro.css
@@ -15,28 +15,33 @@
 }
 
 .services-intro__text {
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: #343a40;
-  line-height: 1.6;
+  
   margin-bottom: 1.5rem;
 }
 
 .services-intro__btn {
   font-size: 1rem;
-  padding: .75rem 1.5rem;
+  padding: 0.6rem 1.5rem;
   border-radius: 50px;
+  font-family: 'Italianno-Regular', cursive;
 }
 
 .services-intro__image-col {
   padding: 0;
 }
 
-.services-intro__image {
-  background-image: url('https://source.unsplash.com/800x600/?spa,hotel');
+services-intro__carousel {
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+.services-intro__img {
+  height: 300px;
+  object-fit: cover;
   background-size: cover;
   background-position: center;
-  width: 100%;
-  padding-top: 75%; /* 4:3 ratio */
   border-radius: .5rem;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
